--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% include head.html %}
-  <body>
+  <head>
+    {% include head.html %}
+  </head>
+  <body class="body-content">
     {% include header.html %}
     <div class="wrapper">
-      {{ content }}
-
+      <div class="content">
+        {{ content }}
+      </div>
       <div class="push"></div>
     </div>
 
