--- a/css/styles.css
+++ b/css/styles.css
@@ -70,44 +70,50 @@ body:after {
   display: flex;
 }
 
-#learn {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url(".././img/learn.jpeg");
+#learn-img {
+  background-image: url(".././img/learn.jpeg");
   background-size: 40vw;
-  /* background-size: 550px; */
   border-right: 1px gray solid;
 }
 
-#learn-img:hover {
+/* #learn-img:hover {
   background-image: url(".././img/learn.jpeg");
   transition: background-image 2s linear;
   /* -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden; */
-}
+  -ms-backface-visibility: hidden; 
+} */
 
-#build {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(38, 38, 38, 0.5),
-      rgba(38, 38, 38, 0.5)
-    ),
-    url(".././img/build.jpeg");
+#build-img {
+  background-image: url(".././img/build.jpeg");
   background-size: 41vw;
   border-right: 1px gray solid;
+  /* border-right: 1px gray solid;
+  border: solid 150px #f008;
+  box-sizing: border-box;
+  transition: 1s ease-out; */
 }
 
-#compete {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url(".././img/compete.jpeg");
+.overlay:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.5;
+  transition: 0.5s;
+}
+
+.overlay:hover:after {
+  opacity: 0;
+}
+
+#build-img:hover {
+  border-color: #0000;
+}
+
+#compete-img {
+  background-image: url(".././img/compete.jpeg");
   background-size: 35vw;
   background-position: 50% 50%;
 }
@@ -116,31 +122,15 @@ body:after {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* position: relative; */
   margin: 0;
   padding: 0;
-  /* height: 250px; */
   height: 20vw;
   width: auto;
   width: 33.33%;
   background-size: contain;
   text-decoration: none;
-}
-
-/* .slogan-img {
-  width: 33%;
-  height: auto;
   position: relative;
-  background-color: black;
-  z-index: 5;
-} */
-
-/* .overlay {
-  background-color: black;
-  display: inline-block;
-  z-index: 100;
-  border: 1px red solid;
-} */
+}
 
 .slogan-text {
   display: inline-block;
@@ -204,31 +194,23 @@ TEAMS
   width: 50%;
   /* display: inline-block; */
   display: flex;
+  position: relative;
   justify-content: center;
   align-items: center;
+  text-decoration: none;
 
   /* height: 400px; */
   height: 60vh;
 }
 
 #sumobot {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url(".././img/sumobot.jpeg");
+  background-image: url(".././img/sumobot.jpeg");
   background-size: 55vw;
   border-right: 1px gray solid;
 }
 
 #rover {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url(".././img/rover.jpeg");
+  background-image: url(".././img/rover.jpeg");
   background-size: 80vw;
   background-position: 50% 50%;
 }
@@ -346,3 +328,47 @@ body.credits-page {
 Default Layout
 =========================
 */
+
+.content {
+  margin: 0 10vw;
+}
+
+/* 
+=========================
+Teams Page
+=========================
+*/
+
+.team.on-team-page {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+
+  height: 44vw;
+  text-decoration: none;
+}
+
+#sumobot.on-team-page {
+  background-size: 80vw;
+  border-right: 1px gray solid;
+}
+
+#rover.on-team-page {
+  /* background-image: url(".././img/rover.jpeg"); */
+  background-size: 85vw;
+  background-position: 50% 50%;
+}
+
+.team-text-box-p {
+  position: relative;
+  text-align: center;
+  font-size: 50px;
+  color: white;
+}
+
+.team-text-p {
+  padding: 0;
+  margin: 0;
+}
