--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,8 +2,10 @@
   <link rel="stylesheet" href="css/styles.css" />
   <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
 
-  <script
+  <!-- <script
     src="https://kit.fontawesome.com/bf2637fb62.js"
     crossorigin="anonymous"
-  ></script>
+  ></script> -->
+
+  <script src="js/app.js"></script>
 </head>
