--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,37 @@
+<ul class="nav-links-responsive">
+  <li class="nav-link-responsive"><a href="{{ site.url }}/">HOME</a></li>
+  <li class="nav-link-responsive"><a href="{{ site.url }}/join">JOIN</a></li>
+  <li class="nav-link-responsive">
+    <a href="{{ site.url }}/about">ABOUT</a>
+  </li>
+  <li class="nav-link-responsive">
+    <a href="{{ site.url }}/teams">TEAMS</a>
+  </li>
+  <li class="nav-link-responsive">
+    <a href="{{ site.url }}/contact">CONTACT</a>
+  </li>
+</ul>
+
 <header>
   <div>
-    <!-- <img src="img/logo.png" height="40" width="40" alt="" /> -->
     <h1>YORK UNIVERSITY ROBOTICS SOCIETY</h1>
   </div>
   <nav>
-    <ul>
+    <ul class="nav-links">
       <li><a href="{{ site.url }}/">HOME</a></li>
       <li><a href="{{ site.url }}/join">JOIN</a></li>
       <li><a href="{{ site.url }}/about">ABOUT</a></li>
       <li><a href="{{ site.url }}/teams">TEAMS</a></li>
       <li><a href="{{ site.url }}/contact">CONTACT</a></li>
     </ul>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </div>
   </nav>
 </header>
+
+<!-- <nav class="responsive" style="display: none;"> -->
+
+<!-- </nav> -->
