Progress on responsivness

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -11,6 +11,7 @@ footer {
 #copyright {
   color: #313131;
   display: inline-block;
+  font-size: 1vw;
 }
 
 .social {
@@ -26,4 +27,5 @@ footer {
 .credits {
   color: #313131;
   margin-left: 30px;
+  font-size: 1vw;
 }
