--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,7 @@
     <div id="copyright">
       &copy; York University Robotics Society 2019-2020
     </div>
-    <a href="{{ site.url }}/acknowledgements" class="credits"
-      >Acknowledgements</a
-    >
+    <a href="{{ site.url }}/acknowledgements" class="credits">Acknowledgements</a>
   </div>
 
   <div class="social">
@@ -16,10 +14,10 @@
       <img src="../img/twitter.png" alt="" class="social-icon" />
     </a>
     <a href="{{ site.facebook_link }}" class="social-link" target="_blank">
-      <img src="../img/facebook.png" alt="" class="social-icon"
-    /></a>
+      <img src="../img/facebook.png" alt="" class="social-icon" /></a>
     <a href="{{ site.linkedin_link }}" class="social-link" target="_blank">
       <img src="../img/linkedin.png" alt="" class="social-icon" />
     </a>
   </div>
+  <script src="js/app.js"></script>
 </footer>
