--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
     src="https://kit.fontawesome.com/bf2637fb62.js"
     crossorigin="anonymous"
   ></script> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 
-  <script src="js/app.js"></script>
+
 </head>
