--- a/_sass/page/main.scss
+++ b/_sass/page/main.scss
@@ -133,7 +133,8 @@ body {
 
 #sumobot {
   background-image: url(".././img/sumobot.jpeg");
-  background-size: 55vw;
+  background-size: 90vw;
+  background-position: 30% 30%;
   border-right: 1px gray solid;
 }
 
@@ -147,7 +148,7 @@ body {
   position: relative;
   text-align: center;
   /* top: 150px; */
-  font-size: 50px;
+  font-size: 5vw;
   color: white;
 }
 
@@ -163,11 +164,9 @@ body {
   */
 
 .final {
-  background-image: linear-gradient(
-      to bottom,
+  background-image: linear-gradient(to bottom,
       rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
+      rgba(0, 0, 0, 0.5)),
     url(".././img/circ.jpeg");
   height: 50vw;
   background-position-y: -5vw;
@@ -198,7 +197,7 @@ body {
   margin-top: 25px;
 }
 
-.final > p {
+.final>p {
   color: white;
   /* margin-bottom: 40vw; */
 }
@@ -240,7 +239,7 @@ body {
   color: white;
 }
 
-.some-text > p > a {
+.some-text>p>a {
   color: white;
 }
 
