--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,21 +13,25 @@
 </ul>
 
 <header>
-  <div>
-    <h1>YORK UNIVERSITY ROBOTICS SOCIETY</h1>
-  </div>
+
   <nav>
-    <ul class="nav-links">
-      <li><a href="{{ site.url }}/">HOME</a></li>
-      <li><a href="{{ site.url }}/join">JOIN</a></li>
-      <li><a href="{{ site.url }}/about">ABOUT</a></li>
-      <li><a href="{{ site.url }}/teams">TEAMS</a></li>
-      <li><a href="{{ site.url }}/contact">CONTACT</a></li>
-    </ul>
-    <div class="hamburger">
-      <div class="line"></div>
-      <div class="line"></div>
-      <div class="line"></div>
+    <div class="logo">
+      <img src="img/logo.png" alt="">
+      <h1>YORK UNIVERSITY ROBOTICS SOCIETY</h1>
+    </div>
+    <div class="nav-buttons">
+      <ul class="nav-links">
+        <li class="nav-link"><a href="{{ site.url }}/">HOME</a></li>
+        <li class="nav-link"><a href="{{ site.url }}/join">JOIN</a></li>
+        <li class="nav-link"><a href="{{ site.url }}/about">ABOUT</a></li>
+        <li class="nav-link"><a href="{{ site.url }}/teams">TEAMS</a></li>
+        <li class="nav-link"><a href="{{ site.url }}/contact">CONTACT</a></li>
+      </ul>
+      <div class="hamburger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
     </div>
   </nav>
 </header>
