--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -19,8 +19,8 @@ footer {
 }
 
 .social-icon {
-  height: 22px;
-  width: 22px;
+  width: 3vw;
+  height: auto;
   margin-left: 10px;
 }
 
@@ -28,4 +28,23 @@ footer {
   color: #313131;
   margin-left: 30px;
   font-size: 1vw;
+}
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
+.wrapper {
+  min-height: 100%;
+
+  /* Equal to height of footer */
+  /* But also accounting for potential margin-bottom of last child */
+  margin-bottom: -50px;
+}
+
+.footer,
+.push {
+  height: 50px;
 }
