--- a/css/styles.scss
+++ b/css/styles.scss
@@ -5,7 +5,7 @@
 @import "footer";
 
 @import "layout/default";
-
+@import "layout/team";
 @import "page/main";
 @import "page/credits";
 @import "page/teams";
