Developed sumobot page with the checkers layout

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -24,6 +24,10 @@ footer {
   margin-left: 10px;
 }
 
+.social-link {
+  display: inline-block;
+}
+
 .credits {
   color: #313131;
   margin-left: 30px;
