--- a/_sass/page/main.scss
+++ b/_sass/page/main.scss
@@ -164,9 +164,11 @@ body {
   */
 
 .final {
-  background-image: linear-gradient(to bottom,
+  background-image: linear-gradient(
+      to bottom,
       rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)),
+      rgba(0, 0, 0, 0.5)
+    ),
     url(".././img/circ.jpeg");
   height: 50vw;
   background-position-y: -5vw;
@@ -198,7 +200,7 @@ body {
   margin-top: 25px;
 }
 
-.final>p {
+.final > p {
   color: white;
   /* margin-bottom: 40vw; */
   font-size: 1vw;
@@ -242,7 +244,7 @@ body {
   font-size: 1.5vw;
 }
 
-.some-text>p>a {
+.some-text > p > a {
   color: white;
   font-size: 1.5vw;
 }
