--- a/css/styles.scss
+++ b/css/styles.scss
@@ -6,8 +6,11 @@
 
 @import "layout/default";
 @import "layout/team";
+
 @import "page/main";
 @import "page/credits";
 @import "page/teams";
+
+@import "page/sumobot";
 
 @import "responsive";
