--- a/_sass/page/sumobot.scss
+++ b/_sass/page/sumobot.scss
@@ -1,12 +1,16 @@
 .row {
   display: flex;
-  height: 300px;
+  height: 400px;
+  position: absolute;
+  border: 1px red solid;
 }
 
 .text {
-  padding: 10px 40px 40px 40px;
+  // padding: 10px 40px 40px 40px;
   width: 50%;
   color: white;
+  display: block;
+  // position: absolute;
 
   h2 {
     font-size: 25px;
@@ -14,6 +18,7 @@
 
   p {
     font-size: 20px;
+    display: block;
   }
 
   background-color: black;
@@ -21,10 +26,51 @@
 
 .pic {
   width: 50%;
+  border: 1px blue solid;
+  display: block;
+  height: auto;
+  // background-size: contains;
+  min-height: 400px;
+  min-width: auto;
+  // position: absolute;
 }
 
 #sumobot-pic-1 {
   background-image: url(".././img/sumobot.jpeg");
-  // background-size: 100%;
+  background-size: 300%;
   background-position: 50% 40%;
+}
+
+img {
+  width: auto;
+  height: 300px;
+  display: block;
+  // position: relative;
+}
+
+@media only screen and (max-width: 1026px) {
+  .row {
+    display: block;
+
+    // height: 800px;
+    // flex-direction: column;
+    // position: absolute;
+  }
+
+  .text {
+    width: 100%;
+    // display: block;
+    // display: inline-block;
+  }
+
+  .pic {
+    width: 100%;
+    display: inline-block;
+    // height: auto;
+    // display: inline-block;
+
+    // background-size: contain;
+
+    // overflow: visible;
+  }
 }
