seperated into several components now

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,23 +1,41 @@
-<footer>
-  <div class="other">
-    <div id="copyright">
-      &copy; York University Robotics Society 2019-2020
-    </div>
-    <a href="{{ site.url }}/acknowledgements" class="credits">Acknowledgements</a>
-  </div>
+<footer id="footer">
+  <!-- Icons -->
+  <ul class="icons">
+    <li>
+      <a href="#" class="icon brands fa-twitter"
+        ><span class="label">Twitter</span></a
+      >
+    </li>
+    <li>
+      <a href="#" class="icon brands fa-facebook-f"
+        ><span class="label">Facebook</span></a
+      >
+    </li>
+    <li>
+      <a href="#" class="icon brands fa-instagram"
+        ><span class="label">Instagram</span></a
+      >
+    </li>
+    <li>
+      <a href="#" class="icon brands fa-linkedin-in"
+        ><span class="label">LinkedIn</span></a
+      >
+    </li>
+    <li>
+      <a href="#" class="icon brands fa-dribbble"
+        ><span class="label">Dribbble</span></a
+      >
+    </li>
+    <li>
+      <a href="#" class="icon brands fa-pinterest"
+        ><span class="label">Pinterest</span></a
+      >
+    </li>
+  </ul>
 
-  <div class="social">
-    <a href="{{ site.instagram_link }}" class="social-link" target="_blank">
-      <img src="../img/instagram.png" alt="" class="social-icon" />
-    </a>
-    <a href="{{ site.twitter_link }}" class="social-link" target="_blank">
-      <img src="../img/twitter.png" alt="" class="social-icon" />
-    </a>
-    <a href="{{ site.facebook_link }}" class="social-link" target="_blank">
-      <img src="../img/facebook.png" alt="" class="social-icon" /></a>
-    <a href="{{ site.linkedin_link }}" class="social-link" target="_blank">
-      <img src="../img/linkedin.png" alt="" class="social-icon" />
-    </a>
-  </div>
-  <script src="js/app.js"></script>
+  <!-- Menu -->
+  <ul class="menu">
+    <li>&copy; Untitled</li>
+    <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+  </ul>
 </footer>
