--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,41 +1,16 @@
-<ul class="nav-links-responsive">
-  <li class="nav-link-responsive"><a href="{{ site.url }}/">HOME</a></li>
-  <li class="nav-link-responsive"><a href="{{ site.url }}/join">JOIN</a></li>
-  <li class="nav-link-responsive">
-    <a href="{{ site.url }}/about">ABOUT</a>
-  </li>
-  <li class="nav-link-responsive">
-    <a href="{{ site.url }}/teams">TEAMS</a>
-  </li>
-  <li class="nav-link-responsive">
-    <a href="{{ site.url }}/contact">CONTACT</a>
-  </li>
-</ul>
-
-<header>
-
+<header id="header">
+  <h1>York University Robotics Society</h1>
   <nav>
-    <div class="logo">
-      <img src="img/logo.png" alt="">
-      <h1>YORK UNIVERSITY ROBOTICS SOCIETY</h1>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
-    <div class="nav-buttons">
-      <ul class="nav-links">
-        <li class="nav-link"><a href="{{ site.url }}/">HOME</a></li>
-        <li class="nav-link"><a href="{{ site.url }}/join">JOIN</a></li>
-        <li class="nav-link"><a href="{{ site.url }}/about">ABOUT</a></li>
-        <li class="nav-link"><a href="{{ site.url }}/teams">TEAMS</a></li>
-        <li class="nav-link"><a href="{{ site.url }}/contact">CONTACT</a></li>
-      </ul>
-      <div class="hamburger">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </div>
-    </div>
+    <ul class="nav-links">
+      <li class="nav-link"><a href="#intro">Home</a></li>
+      <li class="nav-link"><a href="#one">About us</a></li>
+      <li class="nav-link"><a href="#work">Teams</a></li>
+      <li class="nav-link"><a href="#contact">Contact</a></li>
+    </ul>
   </nav>
 </header>
-
-<!-- <nav class="responsive" style="display: none;"> -->
-
-<!-- </nav> -->
