--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,12 +1,10 @@
 <head>
-  <link rel="stylesheet" href="css/styles.css" />
-  <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
-
-  <!-- <script
-    src="https://kit.fontawesome.com/bf2637fb62.js"
-    crossorigin="anonymous"
-  ></script> -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-
-
+  <title>YURS</title>
+  <meta charset="utf-8" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, user-scalable=no"
+  />
+  <link rel="stylesheet" href="css/main.css" />
+  <!-- <noscript><link rel="stylesheet" href="css/noscript.css" /></noscript> -->
 </head>
