--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,26 +2,26 @@
   <!-- Icons -->
   <ul class="icons">
     <li>
-      <a href="#" class="icon brands fa-twitter"
+      <a href="{{ site.twitter_link }}" class="icon brands fa-twitter"
         ><span class="label">Twitter</span></a
       >
     </li>
     <li>
-      <a href="#" class="icon brands fa-facebook-f"
+      <a href="{{ site.facebook_link }}" class="icon brands fa-facebook-f"
         ><span class="label">Facebook</span></a
       >
     </li>
     <li>
-      <a href="#" class="icon brands fa-instagram"
+      <a href="{{ site.instagram_link }}" class="icon brands fa-instagram"
         ><span class="label">Instagram</span></a
       >
     </li>
     <li>
-      <a href="#" class="icon brands fa-linkedin-in"
+      <a href="{{ site.linkedin_link }}" class="icon brands fa-linkedin-in"
         ><span class="label">LinkedIn</span></a
       >
     </li>
-    <li>
+    <!-- <li>
       <a href="#" class="icon brands fa-dribbble"
         ><span class="label">Dribbble</span></a
       >
@@ -30,12 +30,12 @@
       <a href="#" class="icon brands fa-pinterest"
         ><span class="label">Pinterest</span></a
       >
-    </li>
+    </li> -->
   </ul>
 
   <!-- Menu -->
   <ul class="menu">
-    <li>&copy; Untitled</li>
+    <li>&copy; York University Robotics Society</li>
     <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
   </ul>
 </footer>
