--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,9 @@
 <header id="header">
-  <h1>York University Robotics Society</h1>
+  <div class="brand">
+    <img id="logo" src="../../img/logo-short.png" alt="" />
+    <h1>York University Robotics Society</h1>
+  </div>
+
   <nav>
     <div class="hamburger">
       <div class="line"></div>
@@ -7,10 +11,21 @@
       <div class="line"></div>
     </div>
     <ul class="nav-links">
-      <li class="nav-link"><a href="#intro">Home</a></li>
-      <li class="nav-link"><a href="#one">About us</a></li>
-      <li class="nav-link"><a href="#work">Teams</a></li>
-      <li class="nav-link"><a href="#contact">Contact</a></li>
+      <li class="nav-link">
+        <a href="{{ site.url }}/index.html#intro">Home</a>
+      </li>
+      <li class="nav-link">
+        <a href="{{ site.join_now_link }}">Join Us</a>
+      </li>
+      <li class="nav-link">
+        <a href="{{ site.url }}/index.html#one">About Us</a>
+      </li>
+      <li class="nav-link">
+        <a href="{{ site.url }}/index.html#work">Teams</a>
+      </li>
+      <li class="nav-link">
+        <a href="{{ site.url }}/index.html#contact">Contact</a>
+      </li>
     </ul>
   </nav>
 </header>
