--- a/css/main.scss
+++ b/css/main.scss
@@ -73,6 +73,20 @@
 @import "layout/main";
 @import "layout/footer";
 
+// Extra
+
+@import "components/hamburger";
+
+.dark-layer {
+  background-color: black;
+  opacity: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 /* Intro */
 
 #intro {
@@ -81,15 +95,35 @@
   background-attachment: fixed, fixed;
   background-position: top left, bottom center;
   background-repeat: repeat, no-repeat;
+  background-position-y: 20%;
+  background-position-x: 60%;
+}
+
+#intro-rover {
+  background: url("images/overlay.png"), url("../../img/rover.jpeg");
+  background-size: 256px 256px, cover;
+  background-attachment: fixed, fixed;
+  background-position: top left, bottom center;
+  background-repeat: repeat, no-repeat;
+}
+
+#intro-sumobot {
+  background: url("images/overlay.png"), url("../../img/sumobot.jpeg");
+  background-size: 256px 256px, cover;
+  background-attachment: fixed, fixed;
+  background-position: top left, bottom center;
+  background-repeat: repeat, no-repeat;
+  background-position: 10% 30%;
 }
 
 /* One */
 
 #one {
-  background: url("images/overlay.png"), url("../../img/circ.jpeg");
+  background: url("images/overlay.png"), url("../../img/about-us.jpeg");
   background-size: 256px 256px, cover;
   background-attachment: fixed, fixed;
   background-position: top left, center center;
+  background-position-y: 70%;
 }
 
 /* Two */
@@ -99,6 +133,16 @@
   background-size: 256px 256px, cover;
   background-attachment: fixed, fixed;
   background-position: top left, center center;
+}
+
+/* Teams */
+
+.center-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
 
 /* Contact */
