--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-  <title>YURS</title>
+  <title>{{ page.title }}</title>
   <meta charset="utf-8" />
   <meta
     name="viewport"
@@ -7,4 +7,5 @@
   />
   <link rel="stylesheet" href="css/main.css" />
   <!-- <noscript><link rel="stylesheet" href="css/noscript.css" /></noscript> -->
+  <link rel="shortcut icon" href="img/logo-short.ico" />
 </head>
