--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,10 +18,10 @@
         <a href="{{ site.join_now_link }}">Join Us</a>
       </li>
       <li class="nav-link">
-        <a href="{{ site.url }}/index.html#one">About Us</a>
+        <a href="{{ site.url }}/index.html#about">About Us</a>
       </li>
       <li class="nav-link">
-        <a href="{{ site.url }}/index.html#work">Teams</a>
+        <a href="{{ site.url }}/index.html#teams">Teams</a>
       </li>
       <li class="nav-link">
         <a href="{{ site.url }}/index.html#contact">Contact</a>
