--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,9 +23,9 @@
       <li class="nav-link">
         <a href="{{ site.url }}/index.html#teams">Teams</a>
       </li>
-      <li class="nav-link">
+      <!-- <li class="nav-link">
         <a href="{{ site.url }}/index.html#contact">Contact</a>
-      </li>
+      </li> -->
     </ul>
   </nav>
 </header>
