--- a/css/main.scss
+++ b/css/main.scss
@@ -145,11 +145,12 @@
 
 #rover-point-4 {
   background: url("images/overlay.png"),
-    url("../../img/rover-mechanical-team.png");
+    url("../../img/rover-mechanical-team-1.jpg");
   background-size: 256px 256px, cover;
   background-attachment: fixed, fixed;
   background-position: top left, bottom center;
   background-repeat: repeat, no-repeat;
+  background-position-y: 10%;
 }
 
 // sumobot page
