--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,10 +1,10 @@
 <!-- Scripts -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.poptrox.min.js"></script>
-<script src="assets/js/jquery.scrolly.min.js"></script>
-<script src="assets/js/jquery.scrollex.min.js"></script>
-<script src="assets/js/browser.min.js"></script>
-<script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.js"></script>
-<script src="assets/js/main.js"></script>
-<script src="assets/js/hamburger.js"></script>
+<script src="{{ site.url }}/assets/js/jquery.min.js"></script>
+<script src="{{ site.url }}/assets/js/jquery.poptrox.min.js"></script>
+<script src="{{ site.url }}/assets/js/jquery.scrolly.min.js"></script>
+<script src="{{ site.url }}/assets/js/jquery.scrollex.min.js"></script>
+<script src="{{ site.url }}/assets/js/browser.min.js"></script>
+<script src="{{ site.url }}/assets/js/breakpoints.min.js"></script>
+<script src="{{ site.url }}/assets/js/util.js"></script>
+<script src="{{ site.url }}/assets/js/main.js"></script>
+<script src="{{ site.url }}/assets/js/hamburger.js"></script>
