--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -12,16 +12,16 @@
     </div>
     <ul class="nav-links">
       <li class="nav-link">
-        <a href="{{ site.url }}/index.html#intro">Home</a>
+        <a href="/">Home</a>
       </li>
       <li class="nav-link">
         <a href="{{ site.join_now_link }}">Join Us</a>
       </li>
       <li class="nav-link">
-        <a href="{{ site.url }}/index.html#about">About Us</a>
+        <a href="/#about">About Us</a>
       </li>
       <li class="nav-link">
-        <a href="{{ site.url }}/index.html#teams">Teams</a>
+        <a href="/#teams">Teams</a>
       </li>
       <!-- <li class="nav-link">
         <a href="{{ site.url }}/index.html#contact">Contact</a>
