Implement promo video into website

--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -14,6 +14,9 @@
       <li class="nav-link">
         <a href="/">Home</a>
       </li>
+      <li class="nav-link" id="video-nav-link">
+        <a href="/#video">Promotional Video</a>
+      </li>
       <li class="nav-link">
         <a href="{{ site.join_now_link }}">Join Us</a>
       </li>
