--- a/website/css/main.scss
+++ b/website/css/main.scss
@@ -99,6 +99,35 @@
   background-position-x: 60%;
 }
 
+#video {
+  background: url("images/overlay.png"), url("../../img/video-background.png");
+  background-size: 256px 256px, cover;
+  background-attachment: fixed, fixed;
+  background-position: top left, center center;
+  background-position-y: 70%;
+}
+
+#video-nav-link {
+  color: red;
+}
+
+small.new {
+  color: red;
+  // font: 1em;
+}
+
+// .iframeVideo {
+//   height: 0px;
+//   padding-top: 25px;
+//   padding-bottom: 56.2%;
+//   position: relative;
+// }
+// .iframeVideo iframe {
+//   width: 100%;
+//   height: 100%;
+//   position: absolute;
+// }
+
 #about {
   background: url("images/overlay.png"), url("../../img/about-us.jpeg");
   background-size: 256px 256px, cover;
