--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -1,6 +1,6 @@
 <header id="header">
   <div class="brand">
-    <img id="logo" src="../../img/logo-short.png" alt="" />
+    <img id="logo" src="assets/img/logo-short.png" alt="" />
     <h1>York University Robotics Society</h1>
   </div>
 
