--- a/website/_includes/head.html
+++ b/website/_includes/head.html
@@ -5,9 +5,9 @@
     name="viewport"
     content="width=device-width, initial-scale=1, user-scalable=no"
   />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self';" />
-  <meta http-equiv="X-Content-Type-Options" content="nosniff;" />
-  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN;" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
+  <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" />
 
   <link rel="stylesheet" href="assets/css/main.min.css" />
   <noscript
