--- a/website/_includes/scripts.html
+++ b/website/_includes/scripts.html
@@ -8,3 +8,4 @@
 <script src="assets/js/util.min.js"></script>
 <script src="assets/js/main.min.js"></script>
 <script src="assets/js/hamburger.min.js"></script>
+<script src="assets/js/extra.min.js"></script>
