--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -26,6 +26,9 @@
       <li class="nav-link">
         <a href="/#teams">Teams</a>
       </li>
+      <li class="nav-link">
+        <a href="/#sponsors">Sponsors</a>
+      </li>
       <!-- <li class="nav-link">
         <a href="{{ site.url }}/index.html#contact">Contact</a>
       </li> -->
